--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,12 @@
             "email": "allanmessiasdecoelho@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "pestphp/pest": "^2.6"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    }
 }
